--- a/src/main/resources/templates/web/userinformation.html
+++ b/src/main/resources/templates/web/userinformation.html
@@ -4,42 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>dasuo hasaghi masenjo</title>
 </head>
 <body>
     <div class="wrapper">
         <div id="header">
-            <div class="logo">
-                <a href="#">
-                    <img src="/img/logo.PNG" alt="dasuo-logo">
-                 </a>
-     
-            </div>
-            <div class="menu-top">
-             <ul id="nav">
-                 <li><a href="#">Đăng yêu cầu</a></li>
-                 <li><a href="#">Lớp mới</a></li>
-                 
-                 <li>
-                     <a href="#">Gia sư <i class="fas fa-caret-down icon-down"></i></a>
-                     <ul class="subnav">
-                         <li><a href="http://127.0.0.1:5500/taobaidang.html">Yêu cầu tìm gia sư</a></li>
-                         <li><a href="#">Gia sư online</a></li>
-                         <li><a href="#">Trở thành gia sư</a></li>
-                     </ul>
-                 </li>
-                 <li class="right-side"><a href="#">Hello</a></li>
-             </ul>
-             </div>
-                 
-             </div>
-             
-         
-            
-         </div>
+             <script src="/js/web/components/header_web.js"></script>
+        </div>    
+    </div>
 
          <div style="background-color: #f7f7f7" id="wrapHeadBlock">
              <div class="user-container">
@@ -59,7 +36,7 @@
                      </div>
                      <div class="name-user">
                         <button style="margin-right: 20px;color: #fff;border: none;border-radius: 4px;background-color: #1877f2; float: right;padding:8px 16px;cursor: pointer;font-weight: bold;" type="submit"><i style="margin-right: 2px;" class="fab fa-facebook"></i>Share</button>
-                         <h6 style="margin-bottom: 30px ;margin-top: 20px;margin-left: 210px;color: #069d86;font-size: 18px;">Tân Nguyễn <a style="color: #069d86;margin-left: 4px;" href="http://127.0.0.1:5500/gg.html"><i class="fas fa-file-signature"></i></a></h6>
+                         <h6 style="margin-bottom: 30px ;margin-top: 20px;margin-left: 210px;color: #069d86;font-size: 18px;">Tân Nguyễn <a style="color: #069d86;margin-left: 4px;" href="/suathongtin"><i class="fas fa-file-signature"></i></a></h6>
                          
                      </div>
                      <hr style="width: 84%;opacity: 0.8;;float: right;" >
