--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -89,7 +89,7 @@ body {
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
-	font-family: 'Raleway', sans-serif;
+	font-family:  sans-serif;
 	font-weight:300;
 	margin-top: 20px;
 }
@@ -119,7 +119,7 @@ h1.w3ls {
     -ms-background-size: cover;
     height: 500px;
 }
-h2.agileits1 {
+h2.agileits1, .text-logo {
     font-size: 40px;
     font-weight: normal;
     color: #fff;
@@ -127,6 +127,10 @@ h2.agileits1 {
     padding: 200px 0 15px;
     text-transform: uppercase;
 	font-family: 'Monoton', cursive;
+}
+.text-logo{
+    padding: 0 0 15px;
+    line-height: 54px;
 }
 p.agileits2 {
     font-size: 15px;
@@ -140,7 +144,7 @@ p.agileits2 {
     float: left;
     padding: 25px 0 0;
 }
-input#firstname,input#email,input#password1,input#password2, input#password3 {
+input#firstname,input#email,input#password1,input#password2, input#sodienthoai {
 	width:300px;
 	height:50px;
 	padding:0 15px;
@@ -158,7 +162,7 @@ input#firstname,input#email,input#password1,input#password2, input#password3 {
 	display:block;
 	outline:none;
 }
-input#firstname:focus,input#email:focus,input#password1:focus,input#password2:focus,input#password3:focus,input#firstname:hover,input#email:hover,input#password1:hover,input#password2:hover,input#password3:hover {
+input#firstname:focus,input#email:focus,input#sodienthoai:focus,input#password1:focus,input#password2:focus,input#firstname:hover,input#email:hover,input#password1:hover,input#password2:hover {
 	color:#fff;
 	border-bottom:5px solid #3970b0;
 }
@@ -256,7 +260,7 @@ p.copyright {
 p.wthree {
     font-size: 14px;
 }
-input#firstname, input#email, input#password1, input#password2, input#password3 {
+input#firstname, input#email,input#sodienthoai, input#password1, input#password2 {
 	font-size:15px;
 }
 }
@@ -278,7 +282,7 @@ h2.agileits1 {
 }
 
 @media (max-width: 800px) {
-input#firstname, input#email, input#password1, input#password2, input#password3 {
+input#firstname, input#email,input#sodienthoai, input#password1, input#password2 {
     width: 260px;
 }
 input.register {
@@ -346,7 +350,7 @@ h1.w3ls {
 }
 
 @media (max-width: 384px) {
-input#firstname, input#email, input#password1, input#password2, input#password3 {
+input#firstname, input#email,input#sodienthoai, input#password1, input#password2 {
     width: 230px;
 	height: 40px;
 }
@@ -393,7 +397,7 @@ h2.agileits1 {
 p.agileits2 {
     font-size: 13px;
 }
-input#firstname, input#email, input#password1, input#password2, input#password3 {
+input#firstname, input#email,input#sodienthoai, input#password1, input#password2 {
     width: 195px;
     height: 40px;
 	font-size: 14px;
@@ -575,5 +579,10 @@ input .register {
     color: white;
     font-size: 13px;
     line-height: 17px;
-   
+}
+
+
+.qmk-btn{
+    padding:0 20px;
+    color:#fff;
 }
