Update Sign up function

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -190,7 +190,7 @@ color: #3970b0 !important;
 input:hover:-ms-input-placeholder {  
 color: #3970b0 !important;  
 }
-input.register {
+.register {
     width: 335px;
     margin: 30px auto;
     display: block;
@@ -210,7 +210,7 @@ input.register {
 	-ms-transition:all 0.5s ease-in-out;
 	cursor:pointer;
 }
-input.register:hover {
+.register:hover {
 	color: #fff;
     background-color:#3970b0;
 }
@@ -285,7 +285,7 @@ h2.agileits1 {
 input#firstname, input#email,input#sodienthoai, input#password1, input#password2 {
     width: 260px;
 }
-input.register {
+.register {
     width: 295px;
 }
 p.agileits2 {
@@ -354,7 +354,7 @@ input#firstname, input#email,input#sodienthoai, input#password1, input#password2
     width: 230px;
 	height: 40px;
 }
-input.register {
+.register {
     width: 260px;
 	height:45px;
 }
@@ -406,7 +406,7 @@ input#firstname, input#email,input#sodienthoai, input#password1, input#password2
     width: 90%;
     margin: 0 auto;
 }
-input .register {
+.register {
     width: 230px;
     height: 40px;
 	font-size:15px;
@@ -586,3 +586,38 @@ input .register {
     padding:0 20px;
     color:#fff;
 }
+
+.error-alert-linh {
+    padding: 20px;
+    background-color: #eb7168;
+    color: white;
+    margin-left: 25px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    display: none;
+  }
+
+  .success-alert-linh {
+    padding: 20px;
+    background-color: #04AA6D;
+    color: white;
+    margin-left: 25px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    display: none;
+  }
+  
+  .closebtn-linh {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn-linh:hover {
+    color: black;
+  }
