--- a/src/main/resources/templates/web/hienthilichlop.html
+++ b/src/main/resources/templates/web/hienthilichlop.html
@@ -21,26 +21,7 @@
         </div>
         <div style="width: 100%;margin-top: 54px; padding: 0px 40px;" class="container">
             <div style="width:20% ;" class="left-content">
-                <ul id="accordion">
-                    <li>
-                        <a href="#"><i class="fas fa-graduation-cap tk-icon icon-menu"></i> Trang chủ </a>
-                    </li>
-                    <li><a href="#"><i class="fas fa-comments icon-menu"></i> Cuộc trò chuyện</a></li>
-                    <li><a href="#"><i class="fas fa-bell icon-menu"></i> Thông báo</a></li>
-                    <li>
-                        <a href="#"><i class="fas fa-pen-square icon-menu"></i> Kiểm tra và câu hỏi </a>
-                    </li>
-                    <li>
-                        <a href="#"> <i class="fas fa-heart icon-menu"></i>Giáo trình </a>
-
-                    </li>
-                    <li><a href="#"> <i class="fas fa-dollar-sign icon-menu"></i> Bài học</a></li>
-                    <li>
-                        <a style="color: #ff961e;" href="#"><i class="fas fa-flag icon-menu"></i> Lớp học online
-                            </i></a>
-
-                    </li>
-                </ul>
+                <script src="/js/web/components/leftmenulop.js"></script>
             </div>
 
             <!-- right-content -->
@@ -63,8 +44,8 @@
                 <div class="online-classes">
                     <div class="online-class">
                         <div class="menu-tren">
-                            <a class="cuochop" href="#">Cuộc họp sắp diễn ra</a>
-                            <a class="cuochop" href="#">Cuộc họp trước đó</a>
+                            <a class="cuochop" href="#">Lớp học sắp diễn ra</a>
+                            <a class="cuochop" href="#">Lớp học trước đó</a>
                         </div>
 
                     </div>
