--- a/src/main/resources/templates/web/register.html
+++ b/src/main/resources/templates/web/register.html
@@ -1,83 +1,90 @@
-
 <!doctype html>
 <html>
-<head>
-<title>Register</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Official Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- fonts -->
-<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
-<!-- /fonts -->
-<!-- css -->
-<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-<link href="/css/style.css" rel='stylesheet' type='text/css' media="all" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- /css -->
+<head>
+	<title>Register</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+	<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+		crossorigin="anonymous" />
+	<!-- css -->
+	<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/css/style.css" rel='stylesheet' type='text/css' media="all" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+	<!-- /css -->
 </head>
+
 <body>
- 
-    <div id="header">
-        <div class="logo">
-            <a href="#">
-                
-                    <h2 style=" height: 54px;
+	<div id="header">
+		<div class="logo">
+			<a href="#">
+				<h2 style=" height: 54px;
                     border: black;
                     padding-left: 50px;
                     float: left;" class="text-logo">Dasuo</h2>
-                
-             </a>
- 
-        </div>
-     <div class="btn-dk-dn">
-         <a href="/dangnhap" id="btn-dn">Đăng nhập</a>
-         <a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px; color: yellow;" href="/dangky" id="btn-dk">Đăng ký</a>
-     </div>
-     
-        
-     </div>
-    
-<h1 class="w3ls">ĐĂNG KÝ </h1>
-<div class="content-w3ls">
-	<div class="content-agile1">
-		<h2 class="agileits1">Dasuo</h2>
-		<p class="agileits2">Kết nối gia sư dạy và học trực tuyến .</p>
+			</a>
+		</div>
+		<div class="btn-dk-dn">
+			<a href="/dangnhap" id="btn-dn">Đăng nhập</a>
+			<a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px; color: yellow;" href="/dangky"
+				id="btn-dk">Đăng ký</a>
+		</div>
+
+
 	</div>
-	<div class="content-agile2">
-		<form action="#" method="post">
-			<div class="form-control w3layouts"> 
-				<input type="text" id="firstname" name="firstname" placeholder="Tên" title="Please enter your First Name" required="">
-			</div>
 
-			<div class="form-control w3layouts">	
-				<input type="email" id="email" name="email" placeholder="Email" title="Please enter a valid email" required="">
+	<h1 class="w3ls">ĐĂNG KÝ </h1>
+	<div class="content-w3ls">
+		<div class="content-agile1">
+			<h2 class="agileits1">Dasuo</h2>
+			<p class="agileits2">Kết nối gia sư dạy và học trực tuyến .</p>
+		</div>
+		<div class="content-agile2">
+			<div class="error-alert-linh">
+			<span class="closebtn-linh" onclick="this.parentElement.style.display='none';">&times;</span>
+			<strong>Đăng ký tài khoản thất bại!</strong>
 			</div>
-
-			<div class="form-control agileinfo">	
-				<input type="password" class="lock" name="password" placeholder="Số điện thoại" id="sodienthoai" required="">
-			</div>	
-
-			<div class="form-control agileinfo">	
-				<input type="password" class="lock" name="confirm-password" placeholder="Mật khẩu" id="password1" required="">
-			</div>	
-            
-            <div class="form-control agileinfo">	
-				<input type="password" class="lock" name="confirm-password" placeholder=" Nhập lại mật khẩu" id="password2" required="">
+			<div class="success-alert-linh">
+			<span class="closebtn-linh" onclick="this.parentElement.style.display='none';">&times;</span>
+			<strong>Đăng ký tài khoản thành công!</strong>
 			</div>
-			
-			<input type="submit" class="register" value="Đăng ký">
-		</form>
-		
-		
+			<form>
+				<div class="form-control w3layouts">
+					<input type="text" id="firstname" name="firstname" placeholder="Tên"
+						title="Please enter your First Name" required="">
+				</div>
+
+				<div class="form-control w3layouts">
+					<input type="email" id="email" name="email" placeholder="Email" title="Please enter a valid email"
+						required="">
+				</div>
+
+				<div class="form-control agileinfo">
+					<input type="tel" class="lock" name="sodienthoai" placeholder="Số điện thoại (0123-456-789)"
+						id="sodienthoai" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">
+				</div>
+
+				<div class="form-control agileinfo">
+					<input type="password" class="lock" name="password" placeholder="Mật khẩu" id="password1"
+						required="">
+				</div>
+
+				<div class="form-control agileinfo">
+					<input type="password" class="lock" name="confirm-password" placeholder="Nhập lại mật khẩu"
+						id="password2" required="">
+					<p style="color: #eb7168; display: none; margin-left: 67px;" id="cf-password-msg">Mật khẩu nhập lại không khớp!</p>
+				</div>
+
+				<input type="button" id="submit-btn" class="register" value="Đăng ký">
+			</form>
+		</div>
 	</div>
-	
-    
-</div>
-
+	<script src="\js\web\taikhoan\themtaikhoan.js"></script>
 </body>
 
 </html>
