--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1133,6 +1133,7 @@ textarea{
     background-color: #fff;
     margin-top: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding-bottom: 15px;
 }
 .mota-baidang h2{
     margin-top: 14px;
