--- a/src/main/resources/templates/web/hienthibaidang.html
+++ b/src/main/resources/templates/web/hienthibaidang.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>hiển thị bài đăng</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Bài đăng tìm lớp</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div id="header">
             <script src="/js/web/components/header_web.js"></script>
-        </div>  
         </div>
-        <div style="margin-top: 62px; width: 98%;height: 700px; padding: 0 120px;" class="main-wrapper">
-            <div style="background: color #f7f7f7;; padding-bottom: 10px;height: auto;" class="view">
+    </div>
+    <div style="margin-top: 62px; width: 98%;height: 700px; padding: 0 120px;" class="main-wrapper">
+        <div style="background: color #f7f7f7;; padding-bottom: 10px;height: auto;" class="view">
             <div class="view-header">
                 <h4 style="background-color: #069d86;padding: 8px 8px;width: 20%;color: #fff;">LỚP PHÙ HỢP VỚI BẠN</h4>
-                <hr style="width: 80.2%;opacity: 0.8;;float: right;" >
+                <hr style="width: 80.2%;opacity: 0.8;;float: right;">
             </div>
-            <div  class="bg-gradient-pink">
-                <div  class="page-classes-filters">
-                    <form action="/class" method="get" id="views-exposed-form-nhom-hoc-chung-page-3" accept-charset="UTF-8"><div><div class="views-exposed-form">
-                        <div style="float: left; padding: 16px 8px;width: 100%;" class="views-exposed-widgets clearfix">
-                                
-                                <div  style="float: left;" id="edit-subject-wrapper" class="views-exposed-widget views-widget-filter-field_subject_tid">
-                                    <div class="views-widget">
-                                <div class="form-item form-type-select form-item-subject">
-                       <select style="padding: 6px 12px;" id="edit-subject" name="subject" class="form-select"><option value="All" selected="selected">- Chọn môn học -</option><optgroup label="Môn học phổ thông"><option value="72">Toán</option><option value="73">Lý</option><option value="74">Hóa</option><option value="76">Văn</option></optgroup></select>
-                      </div>
+            <div class="bg-gradient-pink">
+                <div class="page-classes-filters">
+                    <form action="/class" method="get" id="views-exposed-form-nhom-hoc-chung-page-3"
+                        accept-charset="UTF-8">
+                        <div>
+                            <div class="views-exposed-form">
+                                <div style="float: left; padding: 16px 8px;width: 100%;"
+                                    class="views-exposed-widgets clearfix">
+
+                                    <div style="float: left;" id="edit-subject-wrapper"
+                                        class="views-exposed-widget views-widget-filter-field_subject_tid">
+                                        <div class="views-widget">
+                                            <div class="form-item form-type-select form-item-subject">
+                                                <select style="padding: 6px 12px;" id="edit-subject" name="subject"
+                                                    class="form-select">
+                                                    <option value="All" selected="selected">- Chọn môn học -</option>
+                                                    <optgroup label="Môn học phổ thông">
+                                                        <option value="72">Toán</option>
+                                                        <option value="73">Lý</option>
+                                                        <option value="74">Hóa</option>
+                                                        <option value="76">Văn</option>
+                                                    </optgroup>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div style="float: left; padding: 0px 8px;"
+                                        class="views-exposed-widget views-submit-button">
+                                        <input
+                                            style=" border-radius: 4px;padding: 6px 12px;background-color: #069d86;color: #fff;"
+                                            type="submit" id="edit-submit-nhom-hoc-chung" name="" value="Áp dụng"
+                                            class="form-submit">
+                                    </div>
+                                </div>
+                                <div class="hien-thi-ket-qua">
+                                    <p style="font-size: 14px; margin-left: 8px; color: #970218;">Có 2 kết quả hiển thị
+                                    </p>
+                                </div>
                             </div>
-                         <div style="float: left; padding: 0px 8px;" class="views-exposed-widget views-submit-button">
-                            <input style=" border-radius: 4px;padding: 6px 12px;background-color: #069d86;color: #fff;" type="submit" id="edit-submit-nhom-hoc-chung" name="" value="Áp dụng" class="form-submit">
                         </div>
-                            </div>
-                            <div class="hien-thi-ket-qua">
-                                <p style="font-size: 14px; margin-left: 8px; color: #970218;">Có 2 kết quả hiển thị</p>
-                            </div>
-                      </div>
-                      </div>
                     </form>
 
                 </div>
-                <hr style="width: 100%;opacity: 0.8;float: right;" >
+                <hr style="width: 100%;opacity: 0.8;float: right;">
             </div>
-           <div  class="view-content">
-               <div style="margin-bottom: 16px;" class="row-tittle">
-                   <div  class="row">
-                       <div style="float: left;" class="col-md-2 col-sm-2">
+            <div class="view-content">
+                <div style="margin-bottom: 16px;" class="row-tittle">
+                    <div class="row">
+                        <div style="float: left;" class="col-md-2 col-sm-2">
                             <div class="row-request-1">
                                 <h3>NGƯỜI ĐĂNG</h3>
                             </div>
@@ -71,165 +94,17 @@
                                 <h3>PHÍ NHẬN LỚP</h3>
                             </div>
                         </div>
-                   </div>
-                   <hr style="width: 100%;opacity: 0.8;;float: right;" >
-               </div>
-               <div style="float: left;height: auto;" class="bai-dang">
-                   <div style="display: flex;" class="hien-thi-bai-dang">
-                       <div style="width: 15%;text-align: center;" class="cskh">
-                        <div  class="img-cskh">
-                            <h2 style="color: #333;margin-left: -2px; font-size: 30px;"  class="text-logo">Dasuo</h2>
-                           </div>
-                           <div class="mo-ta-cskh">
-                               <p class="creator-name">
-                                <a href="#">Dasuo CSKH </a>
-                               </p>
-                           </div>
-                       </div>
-                       <div style="margin-left: 30px;"  class="mota-baidang">
-                           <div class="mota-soluoc">
-                               <a style="text-decoration: none;" href="#">
-                                
-                                <h2><i style="padding-right: 6px; color: chartreuse;" class="fas fa-check"></i>Lớp học môn toán cấp 2</h2>
-                               </a>
-                               
-                               <div class="para-mota">
-                                   <p>Học viên là nam, học ngu toán từ bé . nhưng mong muốn lớn lên làm giáo sư, tiến sỹ,kỹ sư ... mời cao nhân vào gánh . cảm ơn đã đọc bài  </p>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="hocphidenghi">
-                           <div class="tienhoc">
-                               <p style="margin-left: 8px;color: #ff961e;font-weight: 700;">1.400.000 vnđ/tháng</p>
-                           </div>
-                       </div>
-
-                       <div style="margin-left: 30px; text-align: center;" class="phinhanlop">
-                           <div style=" text-align: center; line-height: 5px;" class="phinhanlop-ctiet">
-                            <p>
-                                <span ma>Phí:</span>
-                                360.000 
-                                <span>vnđ</span>
-                            </p>
-                            <span style="font-size: 14px;font-style: italic;">(Chỉ thu khi nhận lớp)</span>
-                           </div>
-                           <div style="margin-top: 20px; " class="xemchitiet-btn">
-                               <a style="text-decoration: none;border-radius: 3px;color: #fff;padding: 8px 30px; background-color: #ff961e;" href="#" class="xemchitiet">
-                                Xem chi tiết
-                               </a>
-                           </div>
-                       </div>
-                      
-                   </div>
-                   <hr style="margin-top: 12px;">
-               </div>
-
-               <div style="float: left" class="bai-dang">
-                <div style="display: flex;" class="hien-thi-bai-dang">
-                    <div style="width: 15%;text-align: center;" class="cskh">
-                     <div  class="img-cskh">
-                         <h2 style="color: #333;margin-left: -2px; font-size: 30px;"  class="text-logo">Dasuo</h2>
-                        </div>
-                        <div class="mo-ta-cskh">
-                            <p class="creator-name">
-                             <a href="#">Dasuo CSKH </a>
-                            </p>
-                        </div>
                     </div>
-                    <div style="margin-left: 30px;"  class="mota-baidang">
-                        <div class="mota-soluoc">
-                            <a style="text-decoration: none;" href="#">
-                             
-                             <h2><i style="padding-right: 6px; color: chartreuse;" class="fas fa-check"></i>Lớp học môn toán cấp 2</h2>
-                            </a>
-                            
-                            <div class="para-mota">
-                                <p>Học viên là nam, học ngu toán từ bé . nhưng mong muốn lớn lên làm giáo sư, tiến sỹ,kỹ sư ... mời cao nhân vào gánh . cảm ơn đã đọc bài  </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hocphidenghi">
-                        <div class="tienhoc">
-                            <p style="margin-left: 8px;color: #ff961e;font-weight: 700;">1.400.000 vnđ/tháng</p>
-                        </div>
-                    </div>
-
-                    <div style="margin-left: 30px; text-align: center;" class="phinhanlop">
-                        <div style=" text-align: center; line-height: 5px;" class="phinhanlop-ctiet">
-                         <p>
-                             <span ma>Phí:</span>
-                             360.000 
-                             <span>vnđ</span>
-                         </p>
-                         <span style="font-size: 14px;font-style: italic;">(Chỉ thu khi nhận lớp)</span>
-                        </div>
-                        <div style="margin-top: 20px; " class="xemchitiet-btn">
-                            <a style="text-decoration: none;border-radius: 3px;color: #fff;padding: 8px 30px; background-color: #ff961e;" href="#" class="xemchitiet">
-                             Xem chi tiết
-                            </a>
-                        </div>
-                    </div>
-                   
+                    <hr style="width: 100%;opacity: 0.8;;float: right;">
                 </div>
-                <hr style="margin-top: 12px;">
-            </div>
-
-            <div style="float: left" class="bai-dang">
-                <div style="display: flex;" class="hien-thi-bai-dang">
-                    <div style="width: 15%;text-align: center;" class="cskh">
-                     <div  class="img-cskh">
-                         <h2 style="color: #333;margin-left: -2px; font-size: 30px;"  class="text-logo">Dasuo</h2>
-                        </div>
-                        <div class="mo-ta-cskh">
-                            <p class="creator-name">
-                             <a href="#">Dasuo CSKH </a>
-                            </p>
-                        </div>
-                    </div>
-                    <div style="margin-left: 30px;"  class="mota-baidang">
-                        <div class="mota-soluoc">
-                            <a style="text-decoration: none;" href="#">
-                             
-                             <h2><i style="padding-right: 6px; color: chartreuse;" class="fas fa-check"></i>Lớp học môn toán cấp 2</h2>
-                            </a>
-                            
-                            <div class="para-mota">
-                                <p>Học viên là nam, học ngu toán từ bé . nhưng mong muốn lớn lên làm giáo sư, tiến sỹ,kỹ sư ... mời cao nhân vào gánh . cảm ơn đã đọc bài  </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hocphidenghi">
-                        <div class="tienhoc">
-                            <p style="margin-left: 8px;color: #ff961e;font-weight: 700;">1.400.000 vnđ/tháng</p>
-                        </div>
-                    </div>
-
-                    <div style="margin-left: 30px; text-align: center;" class="phinhanlop">
-                        <div style=" text-align: center; line-height: 5px;" class="phinhanlop-ctiet">
-                         <p>
-                             <span ma>Phí:</span>
-                             360.000 
-                             <span>vnđ</span>
-                         </p>
-                         <span style="font-size: 14px;font-style: italic;">(Chỉ thu khi nhận lớp)</span>
-                        </div>
-                        <div style="margin-top: 20px; " class="xemchitiet-btn">
-                            <a style="text-decoration: none;border-radius: 3px;color: #fff;padding: 8px 30px; background-color: #ff961e;" href="#" class="xemchitiet">
-                             Xem chi tiết
-                            </a>
-                        </div>
-                    </div>
-                   
+                <div class="baidang-container">
+                    <script src="/js/web/baidang/hienthibaidang.js"></script>
                 </div>
-                <hr style="margin-top: 12px;">
             </div>
-            
-               
-           </div>
         </div>
-        
+
     </div>
-    <div style="margin-top: -100px;margin-bottom: 30px; text-align: center;" class="Pagination">
+    <div style="margin-top: 10px;margin-bottom: 30px; text-align: center;" class="Pagination">
         <div class="pagination">
             <a href="#">&laquo;</a>
             <a class="active" href="#">1</a>
@@ -239,7 +114,7 @@
             <a href="#">5</a>
             <a href="#">6</a>
             <a href="#">&raquo;</a>
-          </div>
+        </div>
     </div>
     <hr>
     <div class="last-content">
@@ -250,4 +125,5 @@
     </div>
 
 </body>
-</html> 
+
+</html>
