--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -35,7 +35,7 @@
         </div>
         
      <div class="btn-dk-dn">
-         <a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px;" href="/dangnhap" id="btn-dn">Đăng nhập</a>
+         <a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px; color: yellow" href="/dangnhap" id="btn-dn">Đăng nhập</a>
          <a  href="/dangky" id="btn-dk">Đăng ký</a>
      </div>
      
@@ -65,9 +65,7 @@
 
             <div style="margin-left: 75px;" class="tacvu">
                 <a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên mật khẩu</a>
-                <a class="qmk-btn" href="/register.qmk-btn{
-    				padding:0 20px;
-    				color:#fff;}">Tạo tài khoản mới</a>
+                <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
             </div>
             <a href="/trangchu">vao trang chu</a>
 		</form>
