--- a/src/main/resources/templates/web/userinformation.html
+++ b/src/main/resources/templates/web/userinformation.html
@@ -139,121 +139,12 @@
              
          </div>
          <hr style="margin-top: 30px;color: #069d86; width: 100%;">
-           <div class="last-content">
-               <h2 >Hỗ trợ & tư vấn</h2>
-               <div class="btn-last-content">
-                   <a href="" class="support1"><i class="fas fa-phone-alt"></i> Hotline: 0353312340</a>
-                   <a href="" class="support2 "><i class="fas fa-envelope"></i> nguyenminhtan2340@gmail.com</a>
-                   <a href="" class="support3"><i class="fas fa-comment-dots"></i> Tư vấn trực tuyến</a>
-               </div>
-               <h2>Đăng ký nhận tin & kết nối</h2>
-               <div class="email-dk">
-                   <p>Đăng ký email để nhận tin mới nhất từ Dasuo.</p>
-                   <input placeholder="Email" type="text" id="edit-mail" name="mail" value="" size="20"  maxlength="128" class="form-text required">
-                   <a href="#" class="btn-email">Đăng ký</a>
-               </div>
-               <div class="public">
-                   <p>Cộng đồng hơn 15,000 thành viên đang chờ bạn</p>
-                   <a href="#" target="_blank" class="facebook" rel="nofollow"><i class="fab fa-facebook-square"></i></a>
-                   <a href="#" target="_blank" class="twitter" rel="nofollow"><i class="fab fa-twitter-square"></i></a>
-                   <a href="#" target="_blank" class="youtube" rel="nofollow"><i class="fab fa-youtube-square"></i></a>
-                   <a href="#" target="_blank" class="google-plus" rel="nofollow"><i class="fab fa-google-plus-square"></i></a>
-               </div>
-           </div>
-           <div id="footer">
-            <div class="footer-tke">
-                <h3>Thống kê</h3>
-                <ul>
-                    <li>
-                        <strong>5000+</strong>
-                        "gia sư"
-                    </li>
-                    <li>
-                        <strong>15000+</strong>
-                        "người dùng"
-                    </li>
-                    <li>
-                        <strong>9.500+</strong>
-                        "yêu cầu tìm gia sư"
-                    </li>
-                    <li>
-                        <strong>97%</strong>
-                        "Người dùng hài lòng"
-                    </li>
-                </ul>
-
-            </div>
-            <div class="mxh">
-                <h3>Mạng xã hội</h3>
-                <ul>
-                    <li><a href="#"><i class="fab fa-facebook"></i>Facebook</a></li>
-                    <li><a href="#"><i class="fab fa-youtube-square"></i>Youtube</a></li>
-                    <li><a href="#"><i class="fab fa-google-plus"></i>Google +</a></li>
-                </ul>
-            </div>
-            <div class="fan">
-                <h3>Fanpage</h3>
-                <a href="https://www.facebook.com/Dasuo-Li%C3%AAn-k%E1%BA%BFt-gia-s%C6%B0-tr%E1%BB%B1c-tuy%E1%BA%BFn-103659921831108"  target="_blank"><img src="/img/fanpage.PNG" alt=""></a>
-            </div>
-            <div class="mmm">
-                <hr style="width: 92%;border-width: 1px; margin-left: 55px;margin-top: 2px;">
-                <div>
-                    <h4 >Bạn đang muốn</h4>
-                    <ul>
-                        <li><a href="#">Đăng yêu cầu tìm gia sư</a></li>
-                        <li><a href="#">Xem danh sách gia sư</a></li>
-                        <li><a href="#">Góp ý cho Dasuo</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 >Danh mục gia sư</h4>
-                    <ul>
-                        <li><a href="#">Gia sư toán</a></li>
-                        <li><a href="#">Gia sư tiếng anh</a></li>
-                        <li><a href="#">Gia sư online</a></li>
-                        <li><a href="#">Gia sư ngoại ngữ</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 >Dasuo</h4>
-                    <ul>
-                        <li><a href="#">Về chúng tôi</a></li>
-                        <li><a href="#">Quy định MXH Dasuo</a></li>
-                        <li><a href="#">CC bảo mật thông tin</a></li>
-                        <li><a href="#">Liên hệ</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 >Hỗ trợ</h4>
-                    <ul>
-                        <li><a href="#">Hướng dẫn sử dụng</a></li>
-                        <li><a href="#">Mời bạn bè</a></li>
-                        <li><a href="#">Khiếu nại</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 >Dành cho gia sư</h4>
-                    <ul>
-                        <li><a href="#">Trở thành gia sư</a></li>
-                        <li><a href="#">Danh sách lớp mới</a></li>
-                        <li><a href="#">Hướng dẫn cho gia sư</a></li>
-                        <li><a href="#">Chính sách phí</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="home-last-footer">
-                <hr style="width: 92%;border-width: 1px; margin-left: 55px;margin-top: 2px;">
-                <div class="information">
-                    <p>© 2020 - 2021 Tổ chức giáo dục Dasuo Việt Nam <br>
-
-                        Trụ sở: Số 78 Điện Biên Phủ, Quận Thanh Khê, Đà Nẵng <br>
-                        Giấy phép ĐKKD số 0107721396 do Sở kế hoạch và đầu tư thành phố Đà Nẵng cấp ngày 09/02/2021</p>
-                </div>
-            </div>
-            
-        
-            </div>
-    </div>
+         <div class="last-content">
+            <script src="/js/web/components/httv.js"></script>
+        </div>
+        <div id="footer">
+            <script src="/js/web/components/footer_web.js"></script>
+        </div>
     
 </body>
 </html>
