--- a/src/main/resources/templates/web/hienthibaidang.html
+++ b/src/main/resources/templates/web/hienthibaidang.html
@@ -60,8 +60,8 @@
                                             class="form-submit">
                                     </div>
                                 </div>
-                                <div class="hien-thi-ket-qua">
-                                    <p style="font-size: 14px; margin-left: 8px; color: #970218;">Có 2 kết quả hiển thị
+                                <div class="hien-thi-ket-qua" style="margin-top: 35px;">
+                                    <p style="font-size: 14px; margin-left: 8px; color: #970218;">
                                     </p>
                                 </div>
                             </div>
@@ -106,14 +106,7 @@
     </div>
     <div style="margin-top: 10px;margin-bottom: 30px; text-align: center;" class="Pagination">
         <div class="pagination">
-            <a href="#">&laquo;</a>
-            <a class="active" href="#">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">6</a>
-            <a href="#">&raquo;</a>
+            
         </div>
     </div>
     <hr>
