--- a/src/main/resources/templates/web/taobaidang.html
+++ b/src/main/resources/templates/web/taobaidang.html
@@ -54,50 +54,16 @@
                                     Tóm tắt yêu cầu tìm gia sư (1 câu, tối đa 100 ký tự) <span
                                         class="teacher-alert">*</span>
                                 </p>
-                                <input type="text" name="name_class" id="name_class"
+                                <input type="text" name="tomtatyc" id="tomtatyc"
                                     placeholder="Ví dụ: Tìm gia sư tiếng anh lớp 7 Đà Nẵng" maxlength="100" value="">
                             </div>
                             <div class="col-md-6">
                                 <div class="class-field-4 class-field">
                                     <p class="p-create-class-title">Môn học <span class="teacher-alert">*</span></p>
-                                    <select name="subject_class" id="subject-class">
+                                    <select name="monhoclinh" id="monhoclinh">
                                         <option value="">Lựa chọn môn học</option>
-                                        <optgroup label="Môn học phổ thông">
-                                            <option value="72">Toán</option>
-                                            <option value="73">Lý</option>
-                                            <option value="74">Hóa</option>
-                                            <option value="76">Văn</option>
-                                            <option value="677">Tiếng Việt</option>
-                                            <option value="406">Lịch sử</option>
-                                            <option value="407">Địa lý</option>
-                                            <option value="81">Sinh</option>
-                                            <option value="410">Môn phổ thông khác</option>
-                                        </optgroup>
-                                        <optgroup label="Ngoại ngữ">
-                                            <option value="71">Tiếng Anh</option>
-                                            <option value="82">Tiếng Nhật</option>
-                                            <option value="83">Tiếng Hàn</option>
-                                            <option value="85">Tiếng Đức</option>
-                                            <option value="84">Tiếng Pháp</option>
-                                            <option value="409">Tiếng Trung</option>
-                                            <option value="86">Ngoại ngữ khác</option>
-                                        </optgroup>
-                                        <optgroup label="Học nghề">
-                                            <option value="77">Kỹ năng mềm</option>
-                                            <option value="404">Nuôi dạy trẻ</option>
-                                            <option value="411">Công nghệ thông tin</option>
-                                            <option value="412">Thiết kế - Đồ họa - Video</option>
-                                            <option value="90">Sales - Marketing</option>
-                                            <option value="682">Ẩm thực</option>
-                                            <option value="95">Ngành nghề khác</option>
-                                        </optgroup>
-                                        <optgroup label="Thể thao - Nghệ thuật">
-                                            <option value="97">Âm nhạc</option>
-                                            <option value="99">Hội họa</option>
-                                            <option value="101">Dance (nhảy)</option>
-                                            <option value="78">Gyms, yoga, fitness</option>
-                                            <option value="102">Thể thao khác</option>
-                                            <option value="103">Nghệ thuật khác</option>
+                                        <optgroup class="mon-phothong" label="Môn học phổ thông">
+                                            <script src="\js\web\monhoc\hienthidanhsachmon.js"></script>
                                         </optgroup>
                                     </select>
                                 </div>
