--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -49,19 +49,19 @@
 		<p class="agileits2">Kết nối gia sư dạy và học trực tuyến .</p>
 	</div>
 	<div class="content-agile2">
-		<form action="trangchu.html" method="post">
+		<form name='f' th:action="@{/j_spring_security_check}" method='POST'>
 			
 
 			<div class="form-control w3layouts">	
-				<input type="email" id="email" name="email" placeholder="Email" title="Please enter a valid email" required="">
+				<input type="email" id="email" name="username" placeholder="Email" title="Please enter a valid email" required="">
 			</div>
 
 			
 			<div class="form-control agileinfo">	
-				<input type="password" class="lock" name="Mật khẩu" placeholder="Password" id="password2" required="">
+				<input type="password" class="lock" name="password" placeholder="Password" id="password2" required="">
 			</div>	
 			
-			<input type="submit" class="register" value="Đăng nhập">
+			<input type="submit" class="register" value="Đăng nhập" name="submit">
 
             <div style="margin-left: 75px;" class="tacvu">
                 <a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên mật khẩu</a>
