--- a/src/main/resources/templates/web/register.html
+++ b/src/main/resources/templates/web/register.html
@@ -2,43 +2,47 @@
 <html>
 
 <head>
-	<title>Register</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Register</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-	<link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-		crossorigin="anonymous" />
-	<!-- css -->
-	<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="/css/style.css" rel='stylesheet' type='text/css' media="all" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	
-	<!-- /css -->
+<link
+	href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900"
+	rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+	integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+	crossorigin="anonymous" />
+<!-- css -->
+<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css"
+	media="all" />
+<link href="/css/style.css" rel='stylesheet' type='text/css' media="all" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- /css -->
 </head>
 
 <body>
 	<div id="header">
 		<div class="logo">
 			<a href="#">
-				<h2 style=" height: 54px;
-                    border: black;
-                    padding-left: 50px;
-                    float: left;" class="text-logo">Dasuo</h2>
+				<h2
+					style="height: 54px; border: black; padding-left: 50px; float: left;"
+					class="text-logo">Dasuo</h2>
 			</a>
 		</div>
 		<div class="btn-dk-dn">
-			<a href="/dangnhap" id="btn-dn">Đăng nhập</a>
-			<a style="border: 1px solid white;padding: 6px 12px ;border-radius: 3px; color: yellow;" href="/dangky"
-				id="btn-dk">Đăng ký</a>
+			<a href="/dangnhap" id="btn-dn">Đăng nhập</a> <a
+				style="border: 1px solid white; padding: 6px 12px; border-radius: 3px; color: yellow;"
+				href="/dangky" id="btn-dk">Đăng ký</a>
 		</div>
 
 
 	</div>
 
-	<h1 class="w3ls">ĐĂNG KÝ </h1>
+	<h1 class="w3ls">ĐĂNG KÝ</h1>
 	<div class="content-w3ls">
 		<div class="content-agile1">
 			<h2 class="agileits1">Dasuo</h2>
@@ -46,45 +50,53 @@
 		</div>
 		<div class="content-agile2">
 			<div class="error-alert-linh">
-			<span class="closebtn-linh" onclick="this.parentElement.style.display='none';">&times;</span>
-			<strong>Đăng ký tài khoản thất bại!</strong>
+				<span class="closebtn-linh"
+					onclick="this.parentElement.style.display='none';">&times;</span> <strong>Đăng
+					ký tài khoản thất bại!</strong>
 			</div>
 			<div class="success-alert-linh">
-			<span class="closebtn-linh" onclick="this.parentElement.style.display='none';">&times;</span>
-			<strong>Đăng ký tài khoản thành công!</strong>
+				<span class="closebtn-linh"
+					onclick="this.parentElement.style.display='none';">&times;</span> <strong>Đăng
+					ký tài khoản thành công!</strong>
 			</div>
-			<form>
+			<form th:action="@{/dangky}" method="post" modelattribute="taikhoan">
+				
+				<div th:if="${message != null}">
+					<p class="text-warning">[[${message}]]</p>
+				</div>
 				<div class="form-control w3layouts">
-					<input type="text" id="firstname" name="firstname" placeholder="Tên"
+					<input type="text" id="firstname" name="hoTen" placeholder="Tên"
 						title="Please enter your First Name" required="">
 				</div>
 
 				<div class="form-control w3layouts">
-					<input type="email" id="email" name="email" placeholder="Email" title="Please enter a valid email"
-						required="">
+					<input type="email" id="email" name="email" placeholder="Email"
+						title="Please enter a valid email" required="">
 				</div>
 
 				<div class="form-control agileinfo">
-					<input type="tel" class="lock" name="sodienthoai" placeholder="Số điện thoại (0123-456-789)"
-						id="sodienthoai" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">
+					<input type="number" class="lock" name="sdt"
+						placeholder="Số điện thoại (0123-456-789)" id="sodienthoai">
 				</div>
 
 				<div class="form-control agileinfo">
-					<input type="password" class="lock" name="password" placeholder="Mật khẩu" id="password1"
-						required="">
+					<input type="password" class="lock" name="matKhau"
+						placeholder="Mật khẩu" id="password1" required="">
 				</div>
 
 				<div class="form-control agileinfo">
-					<input type="password" class="lock" name="confirm-password" placeholder="Nhập lại mật khẩu"
-						id="password2" required="">
-					<p style="color: #eb7168; display: none; margin-left: 67px;" id="cf-password-msg">Mật khẩu nhập lại không khớp!</p>
+					<input type="password" class="lock" name="confirm-password"
+						placeholder="Nhập lại mật khẩu" id="password2" required="">
+					<p style="color: #eb7168; display: none; margin-left: 67px;"
+						id="cf-password-msg">Mật khẩu nhập lại không khớp!</p>
 				</div>
 
-				<input type="button" id="submit-btn" class="register" value="Đăng ký">
+				<input type="submit" id="submit-btn" class="register"
+					value="Đăng ký">
 			</form>
 		</div>
 	</div>
-	<script src="\js\web\taikhoan\themtaikhoan.js"></script>
+	<!-- <script src="\js\web\taikhoan\themtaikhoan.js"></script> -->
 </body>
 
 </html>
