--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -34,7 +34,8 @@
 
                 <div style="text-align: center; margin-bottom: 30px;" class="body-block">
                     <div style="background-color: #fff; padding: 20px 0;" class="hellouser">
-                        <p>Xin chào <span style="color: #069d86; font-weight: 700;font-size: 20px;">Tân Nguyễn !</span>
+                        <p>Xin chào <span style="color: #069d86; font-weight: 700;font-size: 20px;">[[${ten}]]</span>
+                     
                         </p>
 
                         <p>Chúng tôi biết bạn có nhiều sự lựa chọn. Cảm ơn bạn đã tin tưởng sản phẩm của chúng tôi !</p>
