--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -67,7 +67,7 @@
                 <a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên mật khẩu</a>
                 <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
             </div>
-            <a href="/trangchu">vao trang chu</a>
+            <a href="/trang-chu">vao trang chu</a>
 		</form>
 		
 		
