--- a/src/main/resources/templates/web/taobaidang.html
+++ b/src/main/resources/templates/web/taobaidang.html
@@ -12,7 +12,6 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -24,6 +23,14 @@
 
         <div style="margin-bottom: 20px;margin-left: 60px;" class="container p-create-class-body">
             <div style="margin-top: 74px;" class="form-nhom-hoc">
+                <div class="error-alert-linh">
+                    <span class="closebtn-linh"
+                        onclick="this.parentElement.style.display='none';">&times;</span> <strong>Thêm bài đăng thất bại!</strong>
+                </div>
+                <div class="success-alert-linh">
+                    <span class="closebtn-linh"
+                        onclick="this.parentElement.style.display='none';">&times;</span> <strong>Thêm bài đăng thành công!</strong>
+                </div>
                 <div class="left-form">
                     <div class="header-form">
                         <h2 style="margin: 0;font-size: 24px;">Mô tả yêu cầu tìm gia sư</h2>
@@ -192,10 +199,12 @@
                                         style="color:unset; text-decoration: none;"><i>các quy định</i></a> của
                                     Dasuo.</span>
                             </div>
+                            
+                            <p id="tkid" style="display: none;">[[${tkid}]]</p>
 
                             <!--Button đăng, cập nhật-->
                             <div class="row" style="text-align:center;padding:10px 0;">
-                                <input name="submit-info" type="submit" class="btn-bla-big btn-yellowblacasa"
+                                <input name="submit-info" type="button" data-id="${tkid}" id="dangyc-btn" class="btn-bla-big btn-yellowblacasa"
                                     style="cursor: pointer; color:#fff;font-size: 16px;font-weight:bold;border: none; background-color: orange;padding: 16px 20px;border-radius: 5px;"
                                     value="Đăng yêu cầu">
                             </div>
@@ -281,6 +290,7 @@
                 });
             });
         </script>
+        <script src="/js/web/baidang/thembaidang.js"></script>
 </body>
 
 </html>
