Style Register and Tao Bai Dang pages

--- a/src/main/resources/templates/web/loggin.html
+++ b/src/main/resources/templates/web/loggin.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-<title>loggin</title>
+<title>Đăng Nhập</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Official Signup Form Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
@@ -67,15 +67,8 @@
                 <a style="border-right: 1px solid #fff;" class="qmk-btn" href="#">Quên mật khẩu</a>
                 <a class="qmk-btn" href="/dangky">Tạo tài khoản mới</a>
             </div>
-            <a href="/trang-chu">vao trang chu</a>
 		</form>
-		
-		
 	</div>
-	
-    
 </div>
-
 </body>
-
 </html>
