--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -12,7 +12,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
+    <title>Dasuo</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
                 <div style="text-align: center; margin-bottom: 30px;" class="body-block">
                     <div style="background-color: #fff; padding: 20px 0;" class="hellouser">
-                        <p>Xin chào <span style="color: #069d86; font-weight: 700;font-size: 20px;">[[${ten}]]</span>
+                        <p>Xin chào <span style="color: #069d86; font-weight: 700;font-size: 20px;" id="current-user">[[${ten}]]</span>
                      
                         </p>
 
